# audioplayer-demo

./: README.md  package.json
src/: App.css  App.tsx  Library.css  Library.tsx  Player.css  Player.tsx  Router.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_controls.rs  event_handler.rs  main.rs  song_dir.rs
src-tauri/src/audio_backend/: get_all_audio_devices.rs  mod.rs  output.rs  process.rs
src-tauri/src/util/: mod.rs  setup_lmdb.rs
src-tauri/src/util/lmdb/: audio_files_dir.rs  mod.rs
src/ui_components/: FilePicker.tsx  ProgressBar.css  ProgressBar.tsx
