[package]
name = "tauriaudiopl"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rtrb = "0.3"
creek = { version="1.2.2", features = ["decode-mp3", "decode-flac"] }
cpal = "0.15"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
lmdb-rs = "0.7.6"
dirs = "5.0.1"
tracing = "0.1.40"
lazy_static = "1.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
